media query 320px done

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
         .page_sec {
             height: 100vh;
             position: relative;
-            border: 2px solid greenyellow;
+            /* border: 2px solid greenyellow; */
         }
 
         .footer_div {
@@ -1187,7 +1187,7 @@
         }
 
         /* media queries */
-        /* 320px */
+        /* 320px */  
         @media all and (max-width:320px) {
 
             /* header  */
@@ -1383,14 +1383,14 @@
                 font-size: 3.5vw;
             }
 
-            #skills>section>section:nth-child(4){
+            #skills>section>section:nth-child(4) {
                 top: 186px;
                 display: flex;
                 flex-direction: column;
                 width: 90%;
             }
 
-            #skills>section>section:nth-child(4)>div{
+            #skills>section>section:nth-child(4)>div {
                 height: 325px;
             }
 
@@ -1398,7 +1398,7 @@
                 position: relative;
             }
 
-            #skills>section>section:nth-child(4)>div>h3{
+            #skills>section>section:nth-child(4)>div>h3 {
                 position: relative;
                 top: 46px;
             }
@@ -1407,8 +1407,232 @@
                 position: relative;
                 top: 70px;
                 margin-bottom: 20px;
-                margin-left: 10px; 
-    margin-right: 10px
+                margin-left: 10px;
+                margin-right: 10px
+            }
+
+            /* my projects  */
+
+            #my_projects {
+                height: 2450px;
+            }
+
+            #my_projects>section>h2 {
+                width: 80%;
+                text-align: left;
+                margin: auto;
+                top: 100px;
+                left: 0;
+                right: 0;
+                font-size: 15px;
+            }
+
+            #my_projects>section>hr {
+                top: 125px;
+            }
+
+            #my_projects>section>section:nth-child(3) {
+                display: flex;
+                flex-direction: column;
+                position: relative;
+                top: 150px;
+                width: 90%;
+                row-gap: 0px;
+            }
+
+            #my_projects>section>section:nth-child(3)>div>h4 {
+                font-size: 4vw;
+            }
+
+            #my_projects>section>section:nth-child(3)>div>article {
+                font-size: 3vw;
+            }
+
+            /* my assignments  */
+            #my_assignments {
+                height: 2330px;
+            }
+
+            #my_assignments>section>h2 {
+                width: 80%;
+                text-align: left;
+                margin: auto;
+                top: 100px;
+                left: 0;
+                right: 0;
+                font-size: 15px;
+            }
+
+            #my_assignments>section>hr {
+                top: 125px;
+            }
+
+            #my_assignments>section>section:nth-child(3) {
+                display: flex;
+                flex-direction: column;
+                position: relative;
+                top: 150px;
+                width: 90%;
+                row-gap: 0px;
+            }
+
+            #my_assignments>section>section:nth-child(3)>div>h4 {
+                font-size: 4vw;
+            }
+
+            #my_assignments>section>section:nth-child(3)>div>article {
+                font-size: 3vw;
+            }
+
+            /* my edu qualifi  */
+
+            #my_edu_quali {
+                height: 1350px;
+            }
+
+            #my_edu_quali>section>h2 {
+                width: 80%;
+                text-align: left;
+                margin: auto;
+                top: 100px;
+                left: 0;
+                right: 0;
+                font-size: 15px;
+            }
+
+            #my_edu_quali>section>hr {
+                top: 125px;
+            }
+
+            #my_edu_quali>section>section:nth-child(3) {
+                flex-direction: column;
+                width: 90%;
+                top: 150px;
+                row-gap: 0;
+            }
+
+            #my_edu_quali>section>section:nth-child(3)>div {
+                width: auto;
+            }
+
+            /* contact  */
+            #get_in_touch {
+                height: 880px;
+            }
+
+            #get_in_touch>section>h2 {
+                width: 80%;
+                text-align: left;
+                margin: auto;
+                top: 100px;
+                left: 0;
+                right: 0;
+                font-size: 15px;
+            }
+
+            #get_in_touch>section>hr {
+                top: 125px;
+            }
+
+            #get_in_touch>section>address {
+                position: relative;
+                top: 160px;
+                margin: auto;
+                width: 90%;
+                height: auto;
+                left: 0;
+            }
+
+            #get_in_touch>section>address>div {
+                height: 30px;
+                width: 100%;
+            }
+
+            #get_in_touch>section>address>div>i {
+                font-size: 1em;
+            }
+
+            #get_in_touch>section>address>div>p {
+                font-size: 0.7em;
+            }
+
+            #get_in_touch>section>aside {
+                position: relative;
+                top: 185px;
+                width: 90%;
+                left: 0;
+                margin: auto;
+                /* background-color: #262626; */
+                border: 1px solid #EB4A4C;
+                border-radius: 10px;
+                height: 280px;
+            }
+
+            #get_in_touch>section>aside>fieldset {
+                text-align: center;
+            }
+
+            #get_in_touch>section>aside>fieldset>form {
+                display: inline-block;
+                margin-top: 20px;
+                position: relative;
+                text-align: center;
+            }
+
+            #get_in_touch>section>aside>fieldset>form>div {
+                margin-bottom: 10px;
+                text-align: center;
+            }
+
+            #get_in_touch>section>aside>fieldset>form>div>input {
+                padding-left: 0;
+                width: 90%;
+                height: 24px;
+                font-size: 10px;
+            }
+
+            #get_in_touch>section>aside>fieldset>form>input {
+                padding-left: 0;
+                width: 60%;
+                top: 12px;
+                position: relative;
+                font-size: 11px;
+                height: 24px;
+            }
+
+            #get_in_touch>section>aside>fieldset>form>div>textarea {
+                padding-left: 0;
+                width: 90%;
+                height: 117px;
+                font-size: 10px;
+            }
+
+            #get_in_touch>section>section:nth-child(5) {
+                position: relative;
+                top: 210px;
+                width: 90%;
+                height: 100px;
+            }
+
+            #get_in_touch>section>section:nth-child(5)>p {
+                font-size: 4.1vw;
+                left: 0;
+                right: 0;
+                height: max-content;
+                padding: 20px;
+            }
+
+            #get_in_touch>section>section:nth-child(6) {
+                position: relative;
+                top: 240px;
+            }
+
+            #get_in_touch>section>section:nth-child(6)>p{
+                font-size: 13px;
+            }
+
+            #get_in_touch>section>section:nth-child(6)>section>div i{
+                font-size: 1.5em;
             }
 
             /* common */
@@ -1430,6 +1654,7 @@
             body>div:nth-child(4):hover a>i {
                 font-size: 2em;
             }
+        }    
     </style>
 </head>
 
