adjusted image size of about me/media query 375-425

--- a/assignments/CSS/animation/Case 3/index.html
+++ b/assignments/CSS/animation/Case 3/index.html
@@ -17,9 +17,11 @@
             display: flex;
             animation-name: anima;
             animation-duration: 4s;
-            animation-iteration-count: infinite;
+            animation-iteration-count: 1;
             display: inline-block;
             animation-direction: alternate;
+            animation-timing-function: linear;
+            animation-fill-mode: both;
         }
 
         body>div>img{
