--- a/index.html
+++ b/index.html
@@ -1812,7 +1812,7 @@
             /* my skills  */
 
             #skills {
-                height: 2580px;
+                height: 2660px;
             }
 
             #skills>section>h2 {
@@ -2227,7 +2227,7 @@
                 margin: auto;
                 left: 0;
                 right: 0;
-                width: 40%;
+                width: 150px;
                 height: max-content;
             }
 
@@ -3071,6 +3071,7 @@
                         </a>
                     </nav>
                 </section>
+                
             </section>
         </Section>
 
