adjusted image size of media query 320px

--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
                 margin: auto;
                 left: 0;
                 right: 0;
-                width: 40%;
+                width: 120px;
                 height: max-content;
             }
 
