adjusted image size of media query 320-375px

--- a/index.html
+++ b/index.html
@@ -1758,7 +1758,7 @@
                 margin: auto;
                 left: 0;
                 right: 0;
-                width: 40%;
+                width: 150px;
                 height: max-content;
             }
 
