--- a/index.html
+++ b/index.html
@@ -2228,7 +2228,7 @@
                 left: 0;
                 right: 0;
                 width: 150px;
-                height: max-content;
+                height: 150px;
             }
 
             #about_me>section>section {
