adjusted img size of media query 320-375px

--- a/index.html
+++ b/index.html
@@ -1759,7 +1759,7 @@
                 left: 0;
                 right: 0;
                 width: 150px;
-                height: max-content;
+                height: 150px;
             }
 
             #about_me>section>section {
