reponsive assignment completed

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
         /* my educational qualifications */
 
         #my_edu_quali {
-            height: 100vh;
+            height: 800px;
         }
 
         #my_edu_quali>section>h2 {
@@ -702,7 +702,7 @@
 
         #my_edu_quali>section>section:nth-child(3) {
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             column-gap: 10px;
             row-gap: 20px;
             width: 80%;
@@ -814,13 +814,17 @@
         }
 
         /* contact */
+
+        #get_in_touch{
+            height: 750px;
+        }
         #get_in_touch>section>h2 {
             color: white;
             font-family: 'Poppins', sans-serif;
             font-weight: 500;
             position: absolute;
             left: 10%;
-            top: 15.5%;
+            top: 120px;
             margin: 0;
         }
 
@@ -829,7 +833,7 @@
             width: 80%;
             position: absolute;
             margin: auto;
-            top: 20%;
+            top: 155px;
             left: 0;
             right: 0;
             border: 1px solid white;
@@ -839,20 +843,20 @@
             position: absolute;
             width: 40%;
             left: 10%;
-            top: 27%;
+            top: 200px;
             display: flex;
             flex-direction: column;
-            height: 35%;
+            /* height: 35%; */
         }
 
         #get_in_touch>section>address>div {
             background-color: #2f2d2d;
             width: 85%;
-            margin-bottom: 2.4%;
+            margin-bottom: 12px;
             border-radius: 5px;
             display: flex;
             position: relative;
-            height: 20%;
+            height: 45px;
         }
 
         #get_in_touch>section>address>div:hover i {
@@ -891,15 +895,15 @@
             position: absolute;
             width: 40%;
             left: 50%;
-            top: 27%;
-            height: 35%;
+            top: 200px;
+            /* height: 35%; */
         }
 
         #get_in_touch>section>aside>fieldset>form {
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: repeat(4, 1fr);
-            row-gap: 7%;
+            row-gap: 12px;
             column-gap: 4%;
             margin: 0;
             padding: 0;
@@ -912,7 +916,7 @@
         }
 
         #get_in_touch>section>aside>fieldset>form>div {
-            height: 100%;
+            height: 45px;
         }
 
         #get_in_touch>section>aside>fieldset>form>div>input {
@@ -957,6 +961,7 @@
         #get_in_touch>section>aside>fieldset>form>div:nth-child(3) {
             grid-column: 1/3;
             grid-row: 2/4;
+            height: 90px;
         }
 
         #get_in_touch>section>section:nth-child(5) {
@@ -967,7 +972,7 @@
             border-radius: 10px;
             left: 0;
             right: 0;
-            top: 65%;
+            top: 470px;
             height: 14%;
         }
 
@@ -1007,7 +1012,7 @@
             margin: auto;
             left: 0;
             right: 0;
-            top: 83%;
+            top: 600px;
         }
 
         #get_in_touch>section>section:nth-child(6)>section {
@@ -1582,6 +1587,7 @@
             #get_in_touch>section>aside>fieldset>form>div {
                 margin-bottom: 10px;
                 text-align: center;
+                height: 30px;
             }
 
             #get_in_touch>section>aside>fieldset>form>div>input {
@@ -1594,7 +1600,7 @@
             #get_in_touch>section>aside>fieldset>form>input {
                 padding-left: 0;
                 width: 60%;
-                top: 12px;
+                top: 38px;
                 position: relative;
                 font-size: 11px;
                 height: 24px;
@@ -2051,6 +2057,7 @@
             #get_in_touch>section>aside>fieldset>form>div {
                 margin-bottom: 10px;
                 text-align: center;
+                height: 30px;
             }
 
             #get_in_touch>section>aside>fieldset>form>div>input {
@@ -2063,7 +2070,7 @@
             #get_in_touch>section>aside>fieldset>form>input {
                 padding-left: 0;
                 width: 60%;
-                top: 12px;
+                top: 38px;
                 position: relative;
                 font-size: 11px;
                 height: 24px;
@@ -2520,6 +2527,7 @@
             #get_in_touch>section>aside>fieldset>form>div {
                 margin-bottom: 10px;
                 text-align: center;
+                height: 30px;
             }
 
             #get_in_touch>section>aside>fieldset>form>div>input {
@@ -2532,7 +2540,7 @@
             #get_in_touch>section>aside>fieldset>form>input {
                 padding-left: 0;
                 width: 60%;
-                top: 12px;
+                top: 38px;
                 position: relative;
                 font-size: 11px;
                 height: 24px;
@@ -2943,6 +2951,7 @@
             #get_in_touch>section>aside>fieldset>form>div {
                 margin-bottom: 10px;
                 text-align: center;
+                height: 30px;
             }
 
             #get_in_touch>section>aside>fieldset>form>div>input {
@@ -2955,7 +2964,7 @@
             #get_in_touch>section>aside>fieldset>form>input {
                 padding-left: 0;
                 width: 60%;
-                top: 12px;
+                top: 38px;
                 position: relative;
                 font-size: 11px;
                 height: 24px;
@@ -3125,7 +3134,7 @@
             }
 
             #my_edu_quali {
-                height: 1080px;
+                height: 710px;
             }
 
             #my_edu_quali>section>section:nth-child(3)>div {
@@ -3180,6 +3189,10 @@
                 row-gap: 10px;
             }
 
+            #get_in_touch>section>aside>fieldset>form>div{
+                height: 40px;
+            }
+
             #get_in_touch>section>aside>fieldset>form>div>input {
                 height: 40px;
             }
@@ -3198,6 +3211,71 @@
 
             #get_in_touch>section>section:nth-child(6) {
                 top: 590px;
+            }
+        }
+
+        /* 1024 - 1440 */
+        @media all and (min-width:1024px) and (max-width:1440px) {
+
+            #my_edu_quali {
+                height: 700px;
+            }
+
+            #my_edu_quali>section>section:nth-child(3) {
+                top: 180px;
+                flex-wrap: nowrap;
+            }
+
+            #my_edu_quali>section>section:nth-child(3)>div>hgroup>h4 {
+                font-size: 1vw;
+            }
+
+            #get_in_touch {
+                height: 760px;
+            }
+
+            #get_in_touch>section>h2 {
+                top: 120px;
+            }
+
+            #get_in_touch>section>hr {
+                top: 155px;
+            }
+
+            #get_in_touch>section>address {
+                top: 210px;
+                height: auto;
+            }
+
+            #get_in_touch>section>address>div {
+                height: 44px;
+                margin-bottom: 12px;
+            }
+
+            #get_in_touch>section>aside {
+                top: 210px;
+                height: auto;
+            }
+
+            #get_in_touch>section>aside>fieldset>form {
+                row-gap: 12px;
+            }
+
+            #get_in_touch>section>aside>fieldset>form>div {
+                height: 44px;
+            }
+
+            #get_in_touch>section>aside>fieldset>form>div:nth-child(3) {
+                height: 88px;
+            }
+
+            #get_in_touch>section>section:nth-child(5) {
+                top: 470px;
+                height: 100px;
+            }
+
+            #get_in_touch>section>section:nth-child(6) {
+                top: 610px;
             }
         }
     </style>
