added see more buttons

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
         /* my projects */
         #my_projects {
-            height: 1200px;
+            height: 1300px;
         }
 
         #my_projects>section>h2 {
@@ -578,10 +578,43 @@
             transition-property: color;
         }
 
+        #my_projects>section>a:nth-child(4) {
+            text-decoration: none;
+        }
+
+        #my_projects>section>a:nth-child(4)>section {
+            width: 80%;
+            background-color: #2F2D2D;
+            position: relative;
+            left: 0;
+            right: 0;
+            margin: auto;
+            top: 220px;
+            height: 50px;
+            border-radius: 10px;
+            border: 5px solid #4b4b4b;
+            text-align: center;
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 100;
+        }
+
+        #my_projects>section>a:nth-child(4)>section:hover p {
+            color: #EB4A4C;
+        }
+
+        #my_projects>section>a:nth-child(4)>section>p {
+            position: absolute;
+            margin: auto;
+            top: 12px;
+            left: 0;
+            right: 0;
+        }
+
         /* my assignments */
 
         #my_assignments {
-            height: 1200px;
+            height: 1300px;
         }
 
         #my_assignments>section>h2 {
@@ -671,6 +704,39 @@
             line-height: 25px;
             transition-duration: 1s;
             transition-property: color;
+        }
+
+        #my_assignments>section>a:nth-child(4) {
+            text-decoration: none;
+        }
+
+        #my_assignments>section>a:nth-child(4)>section {
+            width: 80%;
+            background-color: #2F2D2D;
+            position: relative;
+            left: 0;
+            right: 0;
+            margin: auto;
+            top: 220px;
+            height: 50px;
+            border-radius: 10px;
+            border: 5px solid #4b4b4b;
+            text-align: center;
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 100;
+        }
+
+        #my_assignments>section>a:nth-child(4)>section:hover p {
+            color: #EB4A4C;
+        }
+
+        #my_assignments>section>a:nth-child(4)>section>p {
+            position: absolute;
+            margin: auto;
+            top: 12px;
+            left: 0;
+            right: 0;
         }
 
         /* my educational qualifications */
@@ -815,9 +881,10 @@
 
         /* contact */
 
-        #get_in_touch{
+        #get_in_touch {
             height: 750px;
         }
+
         #get_in_touch>section>h2 {
             color: white;
             font-family: 'Poppins', sans-serif;
@@ -1419,7 +1486,7 @@
             /* my projects  */
 
             #my_projects {
-                height: 2450px;
+                height: 2550px;
             }
 
             #my_projects>section>h2 {
@@ -1453,9 +1520,14 @@
                 font-size: 3vw;
             }
 
+            #my_projects>section>a:nth-child(4)>section {
+                top: 180px;
+                font-size: 4vw;
+            }
+
             /* my assignments  */
             #my_assignments {
-                height: 2330px;
+                height: 2390px;
             }
 
             #my_assignments>section>h2 {
@@ -1487,6 +1559,11 @@
 
             #my_assignments>section>section:nth-child(3)>div>article {
                 font-size: 3vw;
+            }
+
+            #my_assignments>section>a:nth-child(4)>section {
+                top: 180px;
+                font-size: 4vw;
             }
 
             /* my edu qualifi  */
@@ -1889,7 +1966,7 @@
             /* my projects  */
 
             #my_projects {
-                height: 2700px;
+                height: 2800px;
             }
 
             #my_projects>section>h2 {
@@ -1923,9 +2000,13 @@
                 font-size: 3vw;
             }
 
+            #my_projects>section>a:nth-child(4)>section {
+                top: 180px;
+            }
+
             /* my assignments  */
             #my_assignments {
-                height: 2600px;
+                height: 2690px;
             }
 
             #my_assignments>section>h2 {
@@ -1957,6 +2038,18 @@
 
             #my_assignments>section>section:nth-child(3)>div>article {
                 font-size: 3vw;
+            }
+
+            #my_assignments>section>a:nth-child(4)>section {
+                top: 170px;
+            }
+
+            #my_assignments>section>a:nth-child(4)>section {
+                font-size: 3vw;
+            }
+
+            #my_assignments>section>a:nth-child(4)>section>p {
+                top: 17px;
             }
 
             /* my edu qualifi  */
@@ -2395,7 +2488,7 @@
 
             /* my assignments  */
             #my_assignments {
-                height: 2840px;
+                height: 2950px;
             }
 
             #my_assignments>section>h2 {
@@ -2427,6 +2520,10 @@
 
             #my_assignments>section>section:nth-child(3)>div>article {
                 font-size: 3vw;
+            }
+
+            #my_assignments>section>a:nth-child(4)>section {
+                top: 180px;
             }
 
             /* my edu qualifi  */
@@ -2807,7 +2904,7 @@
             /* my projects  */
 
             #my_projects {
-                height: 1800px;
+                height: 1900px;
             }
 
             #my_projects>section>section:nth-child(3) {
@@ -2837,7 +2934,7 @@
 
             /* my assignments  */
             #my_assignments {
-                height: 1800px;
+                height: 1900px;
             }
 
             #my_assignments>section>section:nth-child(3) {
@@ -3093,7 +3190,7 @@
             }
 
             #my_projects {
-                height: 1140px;
+                height: 1180px;
             }
 
             #my_projects>section>section:nth-child(3)>div>img {
@@ -3111,6 +3208,10 @@
 
             #my_projects>section>section:nth-child(3)>div>article {
                 font-size: 1vw;
+            }
+
+            #my_projects>section>a:nth-child(4)>section {
+                top: 240px;
             }
 
             #my_assignments {
@@ -3189,7 +3290,7 @@
                 row-gap: 10px;
             }
 
-            #get_in_touch>section>aside>fieldset>form>div{
+            #get_in_touch>section>aside>fieldset>form>div {
                 height: 40px;
             }
 
@@ -3557,6 +3658,11 @@
                         </article>
                     </div>
                 </section>
+                <a href="">
+                    <section>
+                        <p>Check Out My Other Projects</p>
+                    </section>
+                </a>
             </section>
         </section>
 
@@ -3617,6 +3723,11 @@
                         </article>
                     </div>
                 </section>
+                <a href="">
+                    <section>
+                        <p>Check Out All The Assignments</p>
+                    </section>
+                </a>
             </section>
         </section>
 
