--- a/index.html
+++ b/index.html
@@ -3658,7 +3658,7 @@
                         </article>
                     </div>
                 </section>
-                <a href="">
+                <a href="https://github.com/duvindu111?tab=repositories" target="_blank">
                     <section>
                         <p>Check Out My Other Projects</p>
                     </section>
@@ -3723,7 +3723,7 @@
                         </article>
                     </div>
                 </section>
-                <a href="">
+                <a href="pages/assignments.html" target="_blank">
                     <section>
                         <p>Check Out All The Assignments</p>
                     </section>
