added only 2 videos to check

--- a/assignments/CSS/Case 2/index.html
+++ b/assignments/CSS/Case 2/index.html
@@ -208,7 +208,71 @@
                     eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
                     voluptate
                     mollitia adipisci. Minus.</p>
-                
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit deleniti suscipit cum eum corrupti
+                    incidunt
+                    eius consequatur laborum dignissimos fugit dolorem perferendis corporis at laudantium, quis
+                    voluptate
+                    mollitia adipisci. Minus.</p>
             </section>
         </section>
     </main>
