--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -82,6 +82,12 @@
             position: relative;
         }
 
+        body>main>section>div>video {
+            width: 100%;
+            border-radius: 10px 10px 0 0;
+            position: relative;
+        }
+
         body>main>section>div>a>button {
             background-color: #eb4a4c;
             width: max-content;
@@ -197,7 +203,8 @@
     <main>
         <section>
             <div>
-                <img src="assets/images/css case 1.jpg" alt="image of css case 1">
+                <!-- <img src="assets/images/css case 1.jpg" alt="image of css case 1"> -->
+                <video src="assets/videos/css case 1.webm" muted autoplay loop></video>
                 <h4>CSS Case 1</h4>
                 <div></div>
                 <a href="../assignments/CSS/Case 1/index.html" target="_blank">
@@ -205,7 +212,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/css case 2.jpg" alt="image of css case 2">
+                <!-- <img src="assets/images/css case 2.jpg" alt="image of css case 2"> -->
+                <video src="assets/videos/css case 2.webm" muted autoplay loop></video>
                 <h4>CSS Case 2</h4>
                 <div></div>
                 <a href="../assignments/CSS/Case 2/index.html" target="_blank">
