added vids of assignments to the assignments.html

--- a/assignments/CSS/animation/Case 3/index.html
+++ b/assignments/CSS/animation/Case 3/index.html
@@ -17,7 +17,7 @@
             display: flex;
             animation-name: anima;
             animation-duration: 4s;
-            animation-iteration-count: 1;
+            animation-iteration-count: infinite;
             display: inline-block;
             animation-direction: alternate;
             animation-timing-function: linear;
