--- a/pages/assignments.html
+++ b/pages/assignments.html
@@ -221,7 +221,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/css case 3.jpg" alt="image of css case 3">
+                <!-- <img src="assets/images/css case 3.jpg" alt="image of css case 3"> -->
+                <video src="assets/videos/css case 3.webm" muted autoplay loop></video>
                 <h4>CSS Case 3</h4>
                 <div></div>
                 <a href="../assignments/CSS/Case 3/index.html" target="_blank">
@@ -229,7 +230,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/css case 4.jpg" alt="image of css case 4">
+                <!-- <img src="assets/images/css case 4.jpg" alt="image of css case 4"> -->
+                <video src="assets/videos/css case 4.webm" muted autoplay loop></video>
                 <h4>CSS Case 4</h4>
                 <div></div>
                 <a href="../assignments/CSS/Case 4/index.html" target="_blank">
@@ -253,7 +255,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/transition case 1.jpg" alt="image of transition case 1">
+                <!-- <img src="assets/images/transition case 1.jpg" alt="image of transition case 1"> -->
+                <video src="assets/videos/transition case 1.webm" muted autoplay loop></video>
                 <h4>Transition Case 1</h4>
                 <div></div>
                 <a href="../assignments/CSS/Transitions/Case 1/index.html" target="_blank">
@@ -261,7 +264,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/transition case 2.jpg" alt="image of transition case 2">
+                <!-- <img src="assets/images/transition case 2.jpg" alt="image of transition case 2"> -->
+                <video src="assets/videos/transition case 2.webm" muted autoplay loop></video>
                 <h4>Transition Case 2</h4>
                 <div></div>
                 <a href="../assignments/CSS/Transitions/Case 2/index.html" target="_blank">
@@ -269,7 +273,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/transition case 3.jpg" alt="image of transition case 3">
+                <!-- <img src="assets/images/transition case 3.jpg" alt="image of transition case 3"> -->
+                <video src="assets/videos/transition case 3.webm" muted autoplay loop></video>
                 <h4>Transition Case 3</h4>
                 <div></div>
                 <a href="../assignments/CSS/Transitions/Case 3/index.html" target="_blank">
@@ -277,7 +282,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/transition case 4.jpg" alt="image of transition case 4">
+                <!-- <img src="assets/images/transition case 4.jpg" alt="image of transition case 4"> -->
+                <video src="assets/videos/transition case 4.webm" muted autoplay loop></video>
                 <h4>Transition Case 4</h4>
                 <div></div>
                 <a href="../assignments/CSS/Transitions/Case 4/index.html" target="_blank">
@@ -285,7 +291,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/animation case 1.jpg" alt="image of animation case 1">
+                <!-- <img src="assets/images/animation case 1.jpg" alt="image of animation case 1"> -->
+                <video src="assets/videos/animation case 1.webm" muted autoplay loop></video>
                 <h4>Animation Case 1</h4>
                 <div></div>
                 <a href="../assignments/CSS/animation/Case 1/index.html" target="_blank">
@@ -293,7 +300,8 @@
                 </a>
             </div>
             <div>
-                <img src="assets/images/animation case 3.jpg" alt="image of animation case 2">
+                <!-- <img src="assets/images/animation case 3.jpg" alt="image of animation case 2"> -->
+                <video src="assets/videos/animation case 2.webm" muted autoplay loop></video>
                 <h4>Animation Case 2</h4>
                 <div></div>
                 <a href="../assignments/CSS/animation/Case 3/index.html" target="_blank">
