--- a/assignments/CSS/Transitions/Case 2/index.html
+++ b/assignments/CSS/Transitions/Case 2/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
     <style>
         body {
-            background-color: beige;
+            background-color: burlywood;
             position: relative;
             height: 100vh;
             width: 100%;
