--- a/assignments/CSS/Transitions/Case 4/index.html
+++ b/assignments/CSS/Transitions/Case 4/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="normalize.css">
     <style>
+        body{
+            background-color: tan;
+        }
+
         body>div{
             border: 10px solid grey;
             width: 400px;
